Add unit test for POST to /actions with &result=true. Update swagger.
